k8s/countly/countly-deployment.yaml
objects:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: countly
    name: countly-api
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: countly-api
      spec:
        containers:
        - name: countly
          image: styke/countly
          imagePullPolicy: Always
          ports:
          - containerPort: 3001
    triggers:
    - type: ConfigChange

- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: countly
    name: countly-frontend
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: countly-frontend
      spec:
        containers:
        - name: countly
          image: styke/countly
          imagePullPolicy: Always
          ports:
          - containerPort: 6001
    triggers:
    - type: ConfigChange
